--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         
         <label for="title">Job Role</label>
         <select id="title" name="user_title">
+          <option value="select_title">Select Job Role</option>
           <option value="full-stack js developer">Full Stack JavaScript Developer</option>
           <option value="front-end developer">Front End Developer</option>
           <option value="back-end developer">Back End Developer</option>
