--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
           <option value="designer">Designer</option>          
           <option value="student">Student</option>
           <option value="other">Other</option>  
-        </select>           
+        </select> 
+        <br>
+        <input id="other-title" placeholder="Your Job Role">
+        
       </fieldset>
       
       <fieldset class="shirt">
@@ -129,11 +132,11 @@
           </select>
           <label for="exp-year">Expiration Year:</label>
           <select id="exp-year" name="user_exp-year">
-            <option value="2016">2016</option>
-            <option value="2017">2017</option>
-            <option value="2018">2018</option>
-            <option value="2019">2019</option>
-            <option value="2020">2020</option>        		          
+            <option value="2016">2019</option>
+            <option value="2017">2020</option>
+            <option value="2018">2021</option>
+            <option value="2019">2022</option>
+            <option value="2020">2023</option>        		          
           </select> 	                  	         
         </div>
 
