Submit Functionality Operational

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <option value="other">Other</option>  
         </select> 
         <br>
-        <input id="other-title" placeholder="Your Job Role">
+        <input type="text" id="other-title" placeholder="Your Job Role">
         
       </fieldset>
       
