--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <header>
       <span>Register for</span>
-      <h1>Full Stack Conf</h1>
+      <h1>Full Stack Conference</h1>
     </header>
 
     <form action="index.html" method="post">
